--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -19,7 +19,7 @@ AloneDevs
             Hi how are you?
             <p></p>
             Please take a look around here, take your time!
-            <p class="text-warning">
+            <p class="text-danger">
             Please keep in mind that the site displays not so good on smaller devices. We will fix this soon!
             </p>
         </div>
