Toolbar adjustments and DevBlog Pages

--- a/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
+++ b/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
@@ -27,7 +27,7 @@
 
         <div class="col-lg-offset-3 altext">
 
-        <p></p>
+        <p></p>ss
 
             <div class="col-sm-3 col-lg-12 row">
         <h3>Thomas:</h3>
@@ -41,7 +41,7 @@
             <p>Hey I am Moax.</p>
             <p>I am the musician of this Team.</p>
             <p>You can hear my first theme in the Game Teaser.</p>
-            <p>I am not a professional musician this is more a hobby</p>
+            <p>I am not a professional musician this is more a hobby.</p>
         <p></p>
             </div>
                 <div class="col-sm-3 col-lg-12 row">
