--- a/src/AloneBundle/Resources/views/GoHome/dev_blog.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/dev_blog.html.twig
@@ -19,11 +19,91 @@ GoHome - Dev Blog
 
     <ul>
     {% for blog in blogs %}
-        <a class="allink albig" href="{{ path('GoHome_show_devBlog', {'id': blogs[i].id}) }}">{{ blogs[i].title | raw }}</a>
+        <a id="blog_{{ i }}" style="display: none" class="allink albig" href="{{ path('GoHome_show_devBlog', {'id': blogs[i].id}) }}">{{ blogs[i].title | raw }}</a>
         <p></p>
         {% set i = i - 1 %}
     {% endfor %}
     </ul>
 </div>
+
+    <div style="display: inline-block; margin-left: 40%;">
+        <button style="display: none" id="next_button" class="btn btn-alone altext" onclick="nextSite()">
+            <span class="glyphicon glyphicon-arrow-left"> Forward</span>
+        </button>
+
+        <button style="display: none" id="prev_button" class="btn btn-alone altext" onclick="previous()">
+            Previous <span class="glyphicon glyphicon-arrow-right"></span>
+        </button>
+    </div>
+
+{% endblock %}
+
+{% block javascript %}
+
+    <script>
+
+        {#Info: Je kleiner die "i", desto älter der Eintrag#}
+
+        var entrys = [];
+
+        for (var i = 0; i < {{ blogs | length }};i++){
+            entrys.push(document.getElementById("blog_"+i));
+        }
+
+        var prev = document.getElementById("prev_button");
+        var next = document.getElementById("next_button");
+
+        var start = 1;
+        var end   = 5;
+
+        function showButtons() {
+            if(start >= 6){
+                next.style.display = "inline-block";
+            } else {
+                next.style.display = "none";
+            }
+
+
+            if(end <= entrys.length){
+                prev.style.display = "inline-block";
+            } else {
+                prev.style.display = "none";
+            }
+        }
+
+        showButtons();
+
+        function previous() {
+            start = start + 5;
+            end = end + 5;
+            fillSitesWithEntrys();
+        }
+
+        function nextSite() {
+            start = start - 5;
+            end = end - 5;
+            fillSitesWithEntrys();
+        }
+
+
+        function fillSitesWithEntrys() {
+
+            for (var c = 0; c < entrys.length; c++) {
+                entrys[c].style.display = "none";
+            }
+
+            for (var i = entrys.length - start; i >= entrys.length - end; i--) {
+                if (entrys[i] != null) {
+                    entrys[i].style.display = "inline";
+                    entrys[i].style.color = "#336eff";
+                }
+            }
+            showButtons();
+            console.log(end);
+        }
+
+        fillSitesWithEntrys();
+
+    </script>
 
 {% endblock %}
