--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,7 @@ AloneDevs
 {% block content %}
     <div class="container">
     <div class="row">
-        <h1 class="text-center row">
+        <h1 class="text-center row col-md-6 col-lg-12 col-sm-6">
             <u class="alheader">
                 Alone Developers
             </u>
@@ -15,7 +15,7 @@ AloneDevs
     </div>
     </div>
     <div class="albig text-center row">
-        {#<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">#}
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             Hi how are you?
             <p></p>
             Please take a look around here, take your time!
@@ -23,5 +23,5 @@ AloneDevs
             Please keep in mind that the site displays not so good on smaller devices. We will fix this soon!
             </p>
         </div>
-    {#</div>#}
+    </div>
 {% endblock %}
