--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,7 @@ AloneDevs
 {% block content %}
     <div class="container">
     <div class="row">
-        <h1 class="text-center row col-md-12 col-lg-12 col-sm-12">
+        <h1 class="text-center row col-md-12 col-lg-12 col-xs-6">
             <u class="alheader">
                 Alone Developers
             </u>
