--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -7,15 +7,15 @@ AloneDevs
 {% block content %}
     <div class="container">
     <div class="row">
-        <h1 class="text-center row col-md-12 col-lg-12 col-xs-6">
+        <h1 class="text-center row col-md-12 col-lg-12 col-sm-6 col-xs-6">
             <u class="alheader">
                 Alone Developers
             </u>
         </h1>
     </div>
-    </div>
+    </div>ss
     <div class="albig text-center row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6">
             Hi how are you?
             <p></p>
             Please take a look around here, take your time!
