--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -13,7 +13,8 @@ AloneDevs
             </u>
         </h1>
     </div>
-    </div>ss
+    </div>
+    <div class="container-fluid">
     <div class="albig text-center row">
         <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6">
             Hi how are you?
@@ -23,5 +24,6 @@ AloneDevs
             Please keep in mind that the site displays not so good on smaller devices. We will fix this soon!
             </p>
         </div>
+    </div>
     </div>
 {% endblock %}
