--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -165,15 +165,13 @@
 
 .backgroundImage {
     background-image: url("/../images/GoHomeTeaser.png");
-    /*!*background-size: 100% auto;*!*/
-    /*background-repeat: no-repeat;*/
-    /*background-size: cover;*/
-    /*background-position: center;*/
-    top: 0;
-    left: 0;
-
-    min-width: 100%;
-    min-height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 
 }
 
