Background Image "Quick" fix

--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -22,7 +22,7 @@
 <div id="Toolbar">
     {% block toolbar %}
         <div class="container">
-            <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+            {#<div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">#}
                 <a href="{{ path('aboutUs') }}" class="btn toolbar-links">About us</a>
 
                 <a href="{{ path('GoHome_start') }}" class="btn toolbar-links">GoHome</a>
