--- a/src/AloneBundle/Resources/views/GoHome/show_dev_blog.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/show_dev_blog.html.twig
@@ -11,7 +11,7 @@ GoHome - Dev Blog
 {% block content %}
 
     <div class="row">
-        <h1 class="text-center row col-md-6 col-lg-12 col-sm-4">
+        <h1 class="text-center row col-lg-12">
             <u class="altext alheader">
                 "{{ blog.title }}"
             </u>
@@ -29,7 +29,7 @@ GoHome - Dev Blog
             <u>
                 {{ blog.sender }}
             </u>
-        </p>ss
+        </p>
     </div>
 
     <div class="altext" style="margin-left: 32%">
