--- a/src/AloneBundle/Resources/views/GoHome/show_dev_blog.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/show_dev_blog.html.twig
@@ -11,7 +11,7 @@ GoHome - Dev Blog
 {% block content %}
 
     <div class="row">
-        <h1 class="text-center row col-lg-12">
+        <h1 class="text-center row">
             <u class="altext alheader">
                 "{{ blog.title }}"
             </u>
