Background Image "Quick" fix

--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -3,13 +3,13 @@
 <html>
 <head>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     {% block stylesheets %}
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="{{ asset('css/OwnStyle.css') }}">
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vidaloka">
-        <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+        <link href="https://fondddts.googleapis.com/css?family=Cinzel" rel="stylesheet">
     {% endblock %}
 
         <title>{% block title %}{% endblock %}</title>
