--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -12,14 +12,14 @@
 
 .altext{
     font-family: 'Vidaloka';
-    font-size: 110%;
+    font-size: 2vw;
     color: #242424;
 }
 
 .alheader{
     font-family: 'Cinzel';
-    font-size: 370%;
-    text-shadow: 0px 0px 12px rgba(150, 150, 150, 1);
+    font-size: 7vw;
+    text-shadow: 0px 0px 1vw rgba(150, 150, 150, 1);
     color: #2a2a2a;
 }
 
@@ -68,7 +68,7 @@
 
 .btn-blue {
     background: #002845;
-    color: #7e7e7e;
+    color: #7e7a3f;
     border-radius: 13%;
 }
 
@@ -100,13 +100,13 @@
     background-color: #0c0f1e;
     border-radius: 5px;
     border: 2px solid #040404;
-    box-shadow: #000000 0px 0px 14px;
+    box-shadow: #000000 0px 0px 2vw;
     color: #405657;
-    font-size: 42px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    font-size: 2.1vw;
+    padding-left: 1.6vw;
+    padding-right: 1.6vw;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
     text-decoration: none;
     text-shadow: #000000 5px 5px 10px;
     transition: all 0.4s ease;
@@ -115,13 +115,13 @@
     background-color: #050b1c;
     border-radius: 5px;
     border: 2px solid #050c03;
-    box-shadow: #000000 0px 0px 14px;
+    box-shadow: #000000 0px 0px 2vw;
     color: #3e0709;
-    font-size: 42px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    font-size: 2.1vw;
+    padding-left: 1.6vw;
+    padding-right: 1.6vw;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
     text-decoration: none;
     text-shadow: #000000 5px 5px 10px;
     transition: all 0.4s ease;
@@ -146,7 +146,7 @@
 
 .toolbar-links {
     font-family: 'Vidaloka';
-    font-size: 170%;
+    font-size: 1.4vw;
     color: #7aa4a7;
 }
 
