Background hat nun immer die passende viewport größe.

--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -168,7 +168,7 @@
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: 100vw 100vh;
 }
 
 .defaultBackground {
