--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -165,7 +165,7 @@
 
 .backgroundImage {
     background: url("/../images/GoHomeTeaser.png") no-repeat center center fixed;
-    background-size: 100vmax;
+    background-size: 100vw 100vh;
 }
 
 .defaultBackground {
