--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -16,7 +16,7 @@
 
 </head>
 
-<body style="margin-top: 100px;" {% block background %}class="backgroundImage img-responsive"{% endblock %}>
+<body style="margin-top: 100px;" {% block background %}class="backgroundImage"{% endblock %}>
 
 <div>
 <div id="Toolbar">
