--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -37,7 +37,7 @@
     {% endblock %}
 </div>
 
-<div id="content" class="row backgroundImage" style="height: 100vh">
+<div id="content" class="row backgroundImage" style="height: 100vh; width: 100vw">
     {% block content %}
 
     {% endblock %}
