--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -166,6 +166,7 @@
 .backgroundImage {
     background: url("/../images/GoHomeTeaser.png") no-repeat center center fixed;
     background-size: 100vw 100vh;
+    background-position: 0 12vh;
 }
 
 .defaultBackground {
