--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,7 @@ AloneDevs
 {% block content %}
     <div class="container">
     <div class="row">
-        <h1 class="text-center row col-md-12 col-lg-12 col-sm-6 col-xs-6">
+        <h1 class="text-center row">
             <u class="alheader">
                 Alone Developers
             </u>
@@ -16,14 +16,12 @@ AloneDevs
     </div>
     <div class="container-fluid">
     <div class="albig text-center row">
-        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-6">
             Hi how are you?
             <p></p>
             Please take a look around here, take your time!
             <p class="text-warning">
             Please keep in mind that the site displays not so good on smaller devices. We will fix this soon!
             </p>
-        </div>
     </div>
     </div>
 {% endblock %}
