--- a/src/AloneBundle/Resources/views/Friends/friends.html.twig
+++ b/src/AloneBundle/Resources/views/Friends/friends.html.twig
@@ -7,7 +7,7 @@ Friends
 {% block content %}
 
     <div class="row">
-        <h1 class="col-lg-12 col-sm-10 col-xs-10 text-center">
+        <h1 class="text-center">
             <u class="alheader">
                 Friends
             </u>
@@ -15,15 +15,16 @@ Friends
     </div>
 
     <div class="row text-center">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-4">
-        <h2 class="albig ">
-            Check out this cool guys:
+        <h2 class="albig">
+            Thomas on Youtube:
         </h2>
 
         <ul class="altext allink">
-            <li><a href="https://www.youtube.com/channel/UCjyJ3lLvEVdJeTLE5p0WIbQ" target="_blank">ThomaGeddon <span class="glyphicon glyphicon-share-alt"></span> </a></li>
+            <li>
+                <a
+                    href="https://www.youtube.com/channel/UCjyJ3lLvEVdJeTLE5p0WIbQ" target="_blank">ThomaGeddon <span class="glyphicon glyphicon-share-alt"></span>
+                </a>
+            </li>
         </ul>
-
-    </div>
     </div>
 {% endblock %}
