--- a/src/AloneBundle/Resources/views/Contact/contact.html.twig
+++ b/src/AloneBundle/Resources/views/Contact/contact.html.twig
@@ -13,19 +13,16 @@ Contact
             </u>
         </h1>
     </div>
-        <p></p>
 
-
-        <p></p>
         <div class="row text-center altext">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 Want to Contact us? Dont be shy!
                 <p></p>
-                Give us Feedback, ask Details about GoHome or just write us what you have done today :)
-            </div>
+                Give us Feedback, ask Details about GoHome
+                <br>
+                or just write us what you have done today :)
         </div>
-        <p></p>
 
+    <br>
     <div class="row text-center">
         <a class="btn btn-alone" target="_blank" href="https://www.youtube.com/channel/UCwFT6RfDcC21jE-QhYxCt5g">Find us on YouTube!</a>
         <a class="btn btn-alone" target="_blank" href="https://twitter.com/AloneDevelopers">Find us on Twitter!</a>
