--- a/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
@@ -13,19 +13,30 @@ GoHome - About
 
     <div class="row">
         <h1 class="text-center">
-            <u class="altext alheader col-md-6 col-lg-12 col-sm-4">
+            <u class="altext alheader">
                 About GoHome
             </u>
         </h1>
     </div>
 
     <div class="row">
-        <div class="text-center altext col-md-12 col-lg-12 col-sm-12 col-xs-12">
-            <p>You will always remember the happy moments in life.</p>
-            <p>But what, when they turn in your worst nightmares? Exactly this happens to the 10 years old Thomas at his birthday.</p>
-            <p>His birthday becomes the worst day of his life.</p>
-            <p>After 15 Years full of therapies and depressions he manages to break out of this and lives his life as he wants. He gets a job</p>
-            <p>After a short time, he notes that he is in serious danger on the way home. His past overtakes him...</p>
+        <div class="text-center altext">
+            You will always remember the happy moments in life.
+            <br>
+            But what, when they turn in your worst nightmares?
+            <br>
+            Exactly this happens to the 10 years old Thomas at his birthday.
+            <br>
+            His birthday becomes the worst day of his life.
+            <br>
+            After 15 Years full of therapies and depressions
+            <br>
+            he manages to break out of this and lives his life as he wants. He get a job
+            <br>
+            After a short time, he notice that he is in serious danger on the way home.
+            <br>
+            His past overtakes him...
+            <br>
         </div>
     </div>
 {% endblock %}
