About GoHome Text angepasst.

--- a/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
@@ -11,15 +11,12 @@ GoHome - About
 
 {% block content %}
 
-    <div class="row">
         <h1 class="text-center">
             <u class="altext alheader">
                 About GoHome
             </u>
         </h1>
-    </div>
 
-    <div class="row">
         <div class="text-center altext">
             You will always remember the happy moments in life.
             <br>
@@ -31,12 +28,13 @@ GoHome - About
             <br>
             After 15 Years full of therapies and depressions
             <br>
-            he manages to break out of this and lives his life as he wants. He get a job
+            he manages to break out of this and lives his life as he wants.
+            <br>
+            He get a job
             <br>
             After a short time, he notice that he is in serious danger on the way home.
             <br>
             His past overtakes him...
             <br>
         </div>
-    </div>
 {% endblock %}
