About GoHome Text angepasst.

--- a/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
@@ -17,7 +17,7 @@ GoHome - About
             </u>
         </h1>
 
-        <div class="text-center altext">
+        <div class="text-center altext" style="margin-left: 2%">
             You will always remember the happy moments in life.
             <br>
             But what, when they turn in your worst nightmares?
@@ -30,7 +30,7 @@ GoHome - About
             <br>
             he manages to break out of this and lives his life as he wants.
             <br>
-            He get a job
+            He get a job.
             <br>
             After a short time, he notice that he is in serious danger on the way home.
             <br>
