--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="{{ asset('css/OwnStyle.css') }}">
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vidaloka">
         <link href="https://fondddts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     {% endblock %}
 
         <title>{% block title %}{% endblock %}</title>
