--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -17,7 +17,7 @@
 }
 
 .alheader{
-    font-family: 'Cinzel';
+    font-family: 'Handlee';
     font-size: 7vmax;
     text-shadow: 0px 0px 0.5vmax rgba(150, 150, 150, 1);
     color: #2a2a2a;
