About GoHome. Updated

--- a/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
@@ -30,9 +30,9 @@ GoHome - About
             <br>
             he manages to break out of this and lives his life as he wants.
             <br>
-            He get a job.
+            He gets a job.
             <br>
-            After a short time, he notice that he is in serious danger on the way home.
+            After a short time, he notices that he is in serious danger on the way home.
             <br>
             His past overtakes him...
             <br>
