--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -10,6 +10,9 @@
         <link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vidaloka">
         <link href="https://fondddts.googleapis.com/css?family=Cinzel" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Sunshiney" rel="stylesheet">
     {% endblock %}
 
         <title>{% block title %}{% endblock %}</title>
