--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -7,11 +7,11 @@
     border: 0 none;
     font-weight: 400;
     letter-spacing: 0px;
-    font-family: 'Vidaloka';
+    font-family: 'Sunshiney';
 }
 
 .altext{
-    font-family: 'Vidaloka';
+    font-family: 'Indie Flower';
     font-size: 2vmax;
     color: #242424;
 }
@@ -24,13 +24,13 @@
 }
 
 .allink{
-    font-family: 'Vidaloka';
+    font-family: 'Indie Flower';
     font-size: 1.2vmax;
     color: #1e2f48;
 }
 
 .allink:hover{
-    font-family: 'Vidaloka';
+    font-family: 'Indie Flower';
     color: #2e476d;
 }
 
@@ -97,7 +97,7 @@
 }
 
 .btn-innerMenu {
-    background-color: #0c0f1e;
+    background-color: #090d1a;
     border-radius: 5px;
     border: 2px solid #040404;
     box-shadow: #000000 0px 0px 2vmax;
@@ -138,20 +138,20 @@
     top: 0;
     left: 0;
     padding: 5px;
-    background: #0d1736;
-    border-bottom: 1px solid #333;
+    background: #0a132d;
+    border-bottom: 1px solid #0e1434;
     text-align: center;
     z-index: 9999;
 }
 
 .toolbar-links {
-    font-family: 'Vidaloka';
-    font-size: 2.5vh;
+    font-family: 'Indie Flower';
+    font-size: 4vh;
     color: #7aa4a7;
 }
 
 .btn-alone {
-    background-color: #0d1736;
+    background-color: #0a132d;
     border-radius: 5px;
     border: 2px solid #050c03;
     box-shadow: #000000 0 0 0.6vmax;
