--- a/src/AloneBundle/Resources/views/GoHome/dev_blog.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/dev_blog.html.twig
@@ -19,7 +19,7 @@ GoHome - Dev Blog
 
     <ul>
     {% for blog in blogs %}
-        <a id="blog_{{ i }}" style="display: none" class="allink albig" href="{{ path('GoHome_show_devBlog', {'id': blogs[i].id}) }}">{{ blogs[i].title | raw }}</a>
+        <a id="blog_{{ i }}" style="display: none; font-size: 250%" class="allink" href="{{ path('GoHome_show_devBlog', {'id': blogs[i].id}) }}">{{ blogs[i].title | raw }}</a>
         <p></p>
         {% set i = i - 1 %}
     {% endfor %}
@@ -27,11 +27,11 @@ GoHome - Dev Blog
 </div>
 
     <div style="display: inline-block; margin-left: 40%;">
-        <button style="display: none" id="next_button" class="btn btn-alone altext" onclick="nextSite()">
+        <button style="display: none" id="next_button" class="btn btn-alone" onclick="nextSite()">
             <span class="glyphicon glyphicon-arrow-left"> Forward</span>
         </button>
 
-        <button style="display: none" id="prev_button" class="btn btn-alone altext" onclick="previous()">
+        <button style="display: none" id="prev_button" class="btn btn-alone" onclick="previous()">
             Previous <span class="glyphicon glyphicon-arrow-right"></span>
         </button>
     </div>
