--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Sunshiney" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Bilbo" rel="stylesheet">
     {% endblock %}
 
         <title>{% block title %}{% endblock %}</title>
