--- a/src/AloneBundle/Resources/views/Contact/contact.html.twig
+++ b/src/AloneBundle/Resources/views/Contact/contact.html.twig
@@ -6,11 +6,9 @@ Contact
 
 {% block content %}
 
-    <div class="row text-center altext">
-        <h1>
-            <u class="altext alheader">
+    <div class="row text-center">
+        <h1 class="alheader">
                 Contact
-            </u>
         </h1>
     </div>
 
