--- a/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
@@ -8,13 +8,10 @@ GoHome - About
     class="defaultBackground"
 {% endblock %}
 
-
 {% block content %}
 
-        <h1 class="text-center">
-            <u class="altext alheader">
+        <h1 class="text-center alheader">
                 About GoHome
-            </u>
         </h1>
 
         <div class="text-center altext" style="margin-left: 2%">
