--- a/src/AloneBundle/Resources/views/GoHome/show_dev_blog.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/show_dev_blog.html.twig
@@ -10,13 +10,11 @@ GoHome - Dev Blog
 
 {% block content %}
 
-    <div class="row col-lg-12">
-        <h1 class="text-center">
-            <u class="altext alheader">
+        <h1 class="text-center altext" style="font-size: 4vmax">
+            <b>
                 "{{ blog.title }}"
-            </u>
+            </b>
         </h1>
-    </div>
 
     <div class="row col-lg-12">
         <p class="text-center altext">
