--- a/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
+++ b/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
@@ -10,10 +10,8 @@
 
 {% block content %}
     <div class="row text-center">
-        <h1 class="col-lg-12 col-sm-10 col-xs-10">
-            <u class="altext alheader">
+        <h1 class="col-lg-12 col-sm-10 col-xs-10 alheader">
                 About us
-            </u>
         </h1>
     </div>
 <div class="container">
