--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -7,10 +7,8 @@ AloneDevs
 {% block content %}
     <div class="container">
     <div class="row">
-        <h1 class="text-center row">
-            <u class="alheader">
+        <h1 class="text-center row alheader">
                 Alone Developers
-            </u>
         </h1>
     </div>
     </div>
