--- a/src/AloneBundle/Resources/views/GoHome/go_home_start.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_start.html.twig
@@ -7,10 +7,8 @@ GoHome
 {% block content %}
 
     <div class="row text-center">
-        <h1 class="col-lg-12">
-            <u class="altext alheader">
-                Go Home
-            </u>
+        <h1 class="alheader">
+                GoHome
         </h1>
     </div>
 
@@ -21,5 +19,4 @@ GoHome
             <a href="{{ path('GoHome_About') }}" class="btn btn-innerMenu">About</a>
             <a href="{{ path('GoHome_Media') }}" class="btn btn-innerMenu">Media</a>
         <div>
-        {#<img src="{{ asset('images/GoHomeTeaser.png') }}">#}
 {% endblock %}
