--- a/src/AloneBundle/Resources/views/GoHome/show_dev_blog.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/show_dev_blog.html.twig
@@ -28,6 +28,11 @@ GoHome - Dev Blog
         </p>
     </div>
 
+    <div class="row text-center altext">
+        <h3>Created at:</h3>
+        {{ blog.created }}
+    </div>
+
     <div class="altext" style="margin-left: 32%">
     <h2>Comments:</h2>
         {% for comment in comments %}
