--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -19,6 +19,11 @@ AloneDevs
             Hi how are you?
             <p></p>
             Please take a look around here, take your time!
+        <br>
+        <br>
+        <br>
+        <br>
+        <b class="albig text-center row text-warning">This Website will get a new look soon!</b>
     </div>
     </div>
 {% endblock %}
