--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -6,17 +6,9 @@ AloneDevs
 
 {% block content %}
     <div class="container">
-    <div class="row">
-        <h1 class="text-center row alheader">
-                Alone Developers
+        <h1 class="alheader">
+                AloneDevelopers
         </h1>
-    </div>
-    </div>
     <div class="container-fluid">
-    <div class="albig text-center row">
-            Hi how are you?
-            <p></p>
-            Please take a look around here, take your time!
-    </div>
     </div>
 {% endblock %}
