--- a/src/AloneBundle/Resources/views/GoHome/information.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/information.html.twig
@@ -5,11 +5,9 @@
 {% endblock %}
 
 {% block content %}
-
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <p class="altext text-center" style="margin-top: 110px">Please keep in mind that the game is still in heavy development. So pictures from the game does not represent the final version.</p>
+    <div class="row" style="padding-left: 20%; padding-right: 20%">
+            <p class="altext text-center" style="margin-top: 110px">Please keep in mind that the game is still in heavy development.
+                So pictures from the game do not represent the final version.</p>
             <p class="altext text-center">If you want to send us a Fanart then <a href="{{ path('contact') }}">contact</a> us!</p>
-        </div>
     </div>
 {% endblock %}
