--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -13,14 +13,7 @@
 .altext{
     font-family: 'Indie Flower';
     font-size: 2vmax;
-    color: #242424;
-}
-
-.alheader{
-    font-family: 'Bilbo';
-    font-size: 12vmax;
-    text-shadow: 0px 0px 0.2vmax rgba(150, 150, 150, 1);
-    color: #2a2a2a;
+    color: #2e2e2e;
 }
 
 .allink{
@@ -148,15 +141,14 @@
     top: 0;
     left: 0;
     padding: 5px;
-    /*background: #0a132d;*/
-    background: linear-gradient(#0a1020, #0e1434); /* Standard syntax */
+    background: linear-gradient(#0a1020, #0e1434);
     text-align: center;
     z-index: 9999;
 }
 
 .toolbar-links {
     font-family: 'Indie Flower';
-    font-size: 4.5vh;
+    font-size: 5vh;
     color: #7aa4a7;
 }
 
@@ -187,4 +179,12 @@
     float: none;
     margin-right: auto;
     margin-left: auto;
+}
+
+.alheader{
+    font-family: 'Bilbo';
+    font-size: 12vmax;
+    text-shadow: 0px 0px 0.2vmax rgb(0, 0, 0);
+    color: rgb(27, 38, 54);
+    text-align: center;
 }
