--- a/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
@@ -17,9 +17,9 @@ GoHome - About
         <div class="text-center altext" style="margin-left: 2%">
             You will always remember the happy moments in life.
             <br>
-            But what, when they turn in your worst nightmares?
+            But what, when they turn into your worst nightmares?
             <br>
-            Exactly this happens to the 10 years old Thomas at his birthday.
+            Exactly this happens to the 10 year old Thomas at his birthday.
             <br>
             His birthday becomes the worst day of his life.
             <br>
