Thomas Text hinzugefügt

--- a/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
+++ b/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
@@ -30,7 +30,12 @@
             <div class="col-sm-3 col-lg-12 row">
         <h1><b style="font-size: 150%">Thomas:</b></h1>
 
-        <p></p>
+                Hey guys,<br>
+                I'm Thomas and you can call me Johnny Sins, because my dick is so long. Just kidding.<br> I'm the head of our developer studio.
+                I'm a big horror fetishist and therfore I'm creating the ideas and the story for the game. Moreover I'm the manager of
+                AloneDevs and I'm taking care of the promotion of GoHome, make a few designs and cut the trailer for our Game.
+
+                <p></p>
             </div>
             <div class="col-sm-3 col-lg-12 row">
         <h1><b style="font-size: 150%">Moax:</b></h1>
