--- a/src/AloneBundle/Resources/views/Friends/friends.html.twig
+++ b/src/AloneBundle/Resources/views/Friends/friends.html.twig
@@ -7,10 +7,8 @@ Friends
 {% block content %}
 
     <div class="row">
-        <h1 class="text-center">
-            <u class="alheader">
+        <h1 class="text-center alheader">
                 Friends
-            </u>
         </h1>
     </div>
 
