--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{{ asset('css/OwnStyle.css') }}">
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Sunshiney" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Bilbo" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     {% endblock %}
 
         <title>{% block title %}{% endblock %}</title>
@@ -36,7 +36,7 @@
     {% endblock %}
 </div>
 
-<div style="width: 100%" id="content" class="row">
+<div id="content" class="row">
     {% block content %}
     {% endblock %}
     </div>
