--- a/src/AloneBundle/Resources/views/GoHome/go_home_start.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_start.html.twig
@@ -6,17 +6,28 @@ GoHome
 
 {% block content %}
 
-    <div class="row text-center">
+    <div class="row" style="clear: both">
+
         <h1 class="alheader">
                 GoHome
         </h1>
+
+        <h1 class="alheader-Right">
+            Data
+        </h1>
+
     </div>
 
-        <p></p>
-
-        <div class="text-center row">
+        <div class="text-left row" style="padding-left: 4vmax">
             <a href="{{ path('GoHome_devBlog') }}" class="btn btn-innerMenu">Dev Blog</a>
+
             <a href="{{ path('GoHome_About') }}" class="btn btn-innerMenu">About</a>
+
             <a href="{{ path('GoHome_Media') }}" class="btn btn-innerMenu">Media</a>
         <div>
+
+        <div class="text-right row" style="padding-right: 4vmax">
+            Bla
+        <div>
+
 {% endblock %}
