--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -182,10 +182,23 @@
 }
 
 .alheader{
-    font-family: 'Bilbo';
-    font-size: 12vmax;
+    font-family: 'Lora';
+    font-size: 8vmax;
     font-weight:600;
     text-shadow: 0px 0px 0.2vmax rgb(0, 0, 0);
     color: rgb(27, 38, 54);
-    text-align: center;
+    text-align: left;
+    padding: 3%;
+    float: left;
+}
+
+.alheader-Right{
+    font-family: 'Lora';
+    font-size: 8vmax;
+    font-weight:600;
+    text-shadow: 0px 0px 0.2vmax rgb(0, 0, 0);
+    color: rgb(27, 38, 54);
+    text-align: right;
+    padding: 3%;
+    float: right;
 }
