--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -141,7 +141,7 @@
     top: 0;
     left: 0;
     padding: 5px;
-    background: linear-gradient(#0a1020, #0e1434);
+    background: linear-gradient(#000a26, #0a1839);
     text-align: center;
     z-index: 9999;
 }
