--- a/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
+++ b/src/AloneBundle/Resources/views/GoHome/go_home_about.html.twig
@@ -10,11 +10,14 @@ GoHome - About
 
 {% block content %}
 
-        <h1 class="text-center alheader">
+    <div class="row">
+        <h1 class="alheader">
                 About GoHome
         </h1>
+    </div>
 
-        <div class="text-center altext" style="margin-left: 2%">
+    <div class="col-lg-12">
+        <div class="text-center altext">
             You will always remember the happy moments in life.
             <br>
             But what, when they turn into your worst nightmares?
@@ -32,6 +35,6 @@ GoHome - About
             After a short time, he notices that he is in serious danger on the way home.
             <br>
             His past overtakes him...
-            <br>
         </div>
+    </div>
 {% endblock %}
