--- a/web/css/OwnStyle.css
+++ b/web/css/OwnStyle.css
@@ -136,9 +136,21 @@
 
 #Toolbar {
     position: fixed;
-    width: 100vw;
-    height: 12vh;
+    width: 100%;
+    height: 15%;
     top: 0;
+    left: 0;
+    padding: 5px;
+    background: linear-gradient(#000a26, #0a1839);
+    text-align: center;
+    z-index: 9999;
+}
+
+#sitebar {
+    position: fixed;
+    width: 10%;
+    height: 100%;
+    top: 15%;
     left: 0;
     padding: 5px;
     background: linear-gradient(#000a26, #0a1839);
