--- a/src/AloneBundle/Resources/views/Default/index.html.twig
+++ b/src/AloneBundle/Resources/views/Default/index.html.twig
@@ -4,23 +4,27 @@
 AloneDevs
 {% endblock %}
 
+{% block header %}
+Home
+{% endblock %}
+
 {% block content %}
     <div class="container">
     <div class="row">
         <h1 class="text-center row alheader">
-                AloneDevelopers
+                {#AloneDevelopers#}
         </h1>
     </div>
     </div>
-    <div class="container-fluid">
-    <div class="albig text-center row">
-            Hi how are you?
-            <p></p>
-            Please take a look around here, take your time!
-        <br>
-        <br>
-        <br>
-        <br>
+    {#<div class="container-fluid">#}
+    {#<div class="albig text-center row">#}
+            {#Hi how are you?#}
+            {#<p></p>#}
+            {#Please take a look around here, take your time!#}
+        {#<br>#}
+        {#<br>#}
+        {#<br>#}
+        {#<br>#}
     </div>
     </div>
 {% endblock %}
