--- a/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
+++ b/src/AloneBundle/Resources/views/AboutUs/about_us.html.twig
@@ -8,36 +8,27 @@
     class="defaultBackground"
 {% endblock %}
 
-{% block content %}
-    <div class="row text-center">
-        <h1 class="col-lg-12 col-sm-10 col-xs-10 alheader">
-                About us
-        </h1>
-    </div>
-<div class="container">
+{% block header %}
+    About us
+{% endblock %}
 
-    <div class="col-sm-10">
-        <div class="col-lg-offset-3 altext">
+{% block smallHeader %}
+    Who we are and what we do
+{% endblock %}
+
+{% block content %}
+
+    <div class="altext" style="padding: 5%">
             We are a small german indie game developer group called "AloneDevs" (or AloneDevelopers if you want)
             We are three people:
-        </div>
-    </div>
 
-        <div class="col-lg-offset-3 altext">
-
-        <p></p>
-
-            <div class="col-sm-3 col-lg-12 row">
         <h1><b style="font-size: 150%">Thomas:</b></h1>
 
                 Hey guys,<br>
-                I'm Thomas and you can call me Johnny Sins, because my dick is so long. Just kidding.<br> I'm the head of our developer studio.
+                I'm the head of our developer studio.
                 I'm a big horror fetishist and therfore I'm creating the ideas and the story for the game. Moreover I'm the manager of
                 AloneDevs and I'm taking care of the promotion of GoHome, make a few designs and cut the trailer for our Game.
 
-                <p></p>
-            </div>
-            <div class="col-sm-3 col-lg-12 row">
         <h1><b style="font-size: 150%">Moax:</b></h1>
 
 
@@ -46,15 +37,10 @@
             <p>You can hear my first theme in the Game Teaser.</p>
             <p>I am not a professional musician this is more a hobby.</p>
         <p></p>
-            </div>
-                <div class="col-sm-3 col-lg-12 row">
         <h1><b style="font-size: 150%">_dev:</b></h1>
 
             Basically I do all the other things.<p></p> The models, the textures and materials, the (game) world, the AI
             and all the other beautiful things that you can imagine.
             <p></p>I also write this website.
-        </div>
-        </div>
-</div>
-
+    </div>
 {% endblock %}
