--- a/src/AloneBundle/Resources/views/Base_layout.html.twig
+++ b/src/AloneBundle/Resources/views/Base_layout.html.twig
@@ -36,10 +36,22 @@
     {% endblock %}
 </div>
 
-<div id="header" class="row alheader">
-    {% block header %}
-        GoHome
-    {% endblock %}
+{#<div class="logo">#}
+    {#<img src="/../images/AloneDevelopers_Logo_preview.jpeg" width="100%" height="100%" style="max-width: 100%">#}
+{#</div>#}
+
+<div id="header" class="row">
+    <div id="mainHeader" class="alheader">
+        {% block header %}
+            GoHome
+        {% endblock %}
+    </div>
+
+    <div id="smallHeader" class="alSmallHeader">
+        {% block smallHeader %}
+            Welcome to AloneDevelopers
+        {% endblock %}
+    </div>
 </div>
 
 <div id="content" class="row">
